# tasks_propig

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
nginx/: filebeat.yml
src/: Dockerfile  docker-compose.yml
src/adapters/hash/: bcrypt_adapter.py  hash_adapter_interface.py
src/adapters/jwt/: jwt_adapter.py  jwt_adapter_interface.py
src/core/_shared/: entity.py  notification.py
src/core/tasks/application/: exceptions.py
src/core/tasks/application/use_cases/: create_task.py  delete_task.py  get_task.py  list_task.py  update_task.py
src/core/tasks/domain/: task_repository_interface.py  tasks.py
src/core/tasks/infra/: in_memory_task_repository.py
src/core/tasks/tests/domain/: test_tasks.py
src/core/tasks/tests/infra/: test_in_memory_task_repository.py
src/core/user/application/: exceptions.py
src/core/user/application/use_cases/: authenticate_user.py  create_user.py  get_user.py  list_users.py
src/core/user/domain/: user.py  user_repository_interface.py
src/core/user/infra/: in_memory_user_repository.py
src/core/user/tests/domain/: test_user.py
src/django_project/: settings.py  urls.py
src/django_project/auth_app/: apps.py  middleware.py  serializers.py  views.py
src/django_project/task_app/: admin.py  apps.py  models.py  repository.py  serializers.py  views.py
src/django_project/task_app/migrations/: 0001_initial.py  0002_task_status.py
src/django_project/task_app/tests/: test_repository.py  test_views.py
src/django_project/user_app/: admin.py  apps.py  models.py  repository.py  serializers.py  views.py
src/django_project/user_app/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_alter_user_email.py
src/django_project/user_app/tests/: test_repository.py  test_user_endpoint.py
(+14 files in other folders)
