[project]
name = "tasks-propig"
version = "0.1.0"
description = ""
authors = [
    {name = "itallo.minatti",email = "itallominatti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]

[tool.poetry]
packages = [{include = "tasks_propig", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
